src/test/deca/codegen/valid/expr/test_init_float_unaire.deca
// Description:
//   test print unaire int
//
// Resultats:
//   -1.0
//
// Historique:
//  Cree le 15/01/2024
{
    float x = -1.0;
    printlnx(x);
}